<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">piztor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="fetch">Fetch</string>
    <string name="checkin">Checkin</string>
    <string name="focus">Focus</string>
    <string name="show_sex">Show sex: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="show_team">Show team: </string>
    <string name="all">All</string>
    <string name="mine">Mine</string>

</resources>
